adding methods in main for manual testing